// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OverlayComponent should render correctly 1`] = `
<div>
  <div>
    <div>
      <div>
        <div>
          <div>
            <div>
              <span
                css="[object Object]"
              >
                <span />
              </span>
            </div>
            <div
              role="button"
            >
              <div>
                <div>
                  <button
                    data-testid="button"
                  >
                    <span>
                      <span>
                        November
                         
                        2020
                      </span>
                      <span>
                        <span
                          css="[object Object]"
                        >
                          <span />
                        </span>
                      </span>
                    </span>
                  </button>
                </div>
              </div>
              <div>
                <span
                  css="[object Object]"
                >
                  <span />
                </span>
              </div>
            </div>
          </div>
          <div>
            <div>
              Mo
            </div>
            <div>
              Tu
            </div>
            <div>
              We
            </div>
            <div>
              Th
            </div>
            <div>
              Fr
            </div>
            <div>
              Sa
            </div>
            <div>
              Su
            </div>
          </div>
          <table>
            <tbody>
              <tr>
                <td
                  style="padding: 0px;"
                >
                  <div>
                    <div>
                      2
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div>
                    <div>
                      3
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div>
                    <div>
                      4
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div>
                    <div>
                      5
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div>
                    <div>
                      6
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div>
                    <div>
                      7
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div>
                    <div>
                      8
                    </div>
                  </div>
                </td>
              </tr>
              <tr>
                <td
                  style="padding: 0px;"
                >
                  <div>
                    <div>
                      9
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div>
                    <div>
                      10
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div>
                    <div>
                      11
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div>
                    <div>
                      12
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div>
                    <div>
                      13
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div>
                    <div>
                      14
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div>
                    <div>
                      15
                    </div>
                  </div>
                </td>
              </tr>
              <tr>
                <td
                  style="padding: 0px;"
                >
                  <div>
                    <div>
                      16
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div>
                    <div>
                      17
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div>
                    <div>
                      18
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div>
                    <div>
                      19
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div>
                    <div>
                      20
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div>
                    <div>
                      21
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div>
                    <div>
                      22
                    </div>
                  </div>
                </td>
              </tr>
              <tr>
                <td
                  style="padding: 0px;"
                >
                  <div>
                    <div>
                      23
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div>
                    <div>
                      24
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div>
                    <div>
                      25
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div>
                    <div>
                      26
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div>
                    <div>
                      27
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div>
                    <div>
                      28
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div>
                    <div>
                      29
                    </div>
                  </div>
                </td>
              </tr>
              <tr>
                <td
                  style="padding: 0px;"
                >
                  <div>
                    <div>
                      30
                    </div>
                  </div>
                </td>
                <td />
                <td />
                <td />
                <td />
                <td />
                <td />
              </tr>
            </tbody>
          </table>
        </div>
      </div>
      <div>
        <button
          data-testid="button"
        >
          <span>
            <span>
              Cancel
            </span>
          </span>
        </button>
        <button
          data-testid="button"
        >
          <span>
            <span>
              Apply
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`OverlayComponent should render datepicker correctly 1`] = `
<div>
  <div>
    <div>
      <div>
        <div>
          <div>
            <div>
              <span
                css="[object Object]"
              >
                <span />
              </span>
            </div>
            <div
              role="button"
            >
              <div>
                <div>
                  <div>
                    November
                     
                    2020
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div>
            <div>
              Mo
            </div>
            <div>
              Tu
            </div>
            <div>
              We
            </div>
            <div>
              Th
            </div>
            <div>
              Fr
            </div>
            <div>
              Sa
            </div>
            <div>
              Su
            </div>
          </div>
          <table>
            <tbody>
              <tr>
                <td
                  style="padding: 0px;"
                >
                  <div>
                    <div>
                      2
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div>
                    <div>
                      3
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div>
                    <div>
                      4
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div>
                    <div>
                      5
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div>
                    <div>
                      6
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div>
                    <div>
                      7
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div>
                    <div>
                      8
                    </div>
                  </div>
                </td>
              </tr>
              <tr>
                <td
                  style="padding: 0px;"
                >
                  <div>
                    <div>
                      9
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div>
                    <div>
                      10
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div>
                    <div>
                      11
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div>
                    <div>
                      12
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div>
                    <div>
                      13
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div>
                    <div>
                      14
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div>
                    <div>
                      15
                    </div>
                  </div>
                </td>
              </tr>
              <tr>
                <td
                  style="padding: 0px;"
                >
                  <div>
                    <div>
                      16
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div>
                    <div>
                      17
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div>
                    <div>
                      18
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div>
                    <div>
                      19
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div>
                    <div>
                      20
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div>
                    <div>
                      21
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div>
                    <div>
                      22
                    </div>
                  </div>
                </td>
              </tr>
              <tr>
                <td
                  style="padding: 0px;"
                >
                  <div>
                    <div>
                      23
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div>
                    <div>
                      24
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div>
                    <div>
                      25
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div>
                    <div>
                      26
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div>
                    <div>
                      27
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div>
                    <div>
                      28
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div>
                    <div>
                      29
                    </div>
                  </div>
                </td>
              </tr>
              <tr>
                <td
                  style="padding: 0px;"
                >
                  <div>
                    <div>
                      30
                    </div>
                  </div>
                </td>
                <td />
                <td />
                <td />
                <td />
                <td />
                <td />
              </tr>
            </tbody>
          </table>
        </div>
        <div>
          <div>
            <div
              role="button"
            >
              <div>
                <div>
                  <div>
                    December
                     
                    2020
                  </div>
                </div>
              </div>
              <div>
                <span
                  css="[object Object]"
                >
                  <span />
                </span>
              </div>
            </div>
          </div>
          <div>
            <div>
              Mo
            </div>
            <div>
              Tu
            </div>
            <div>
              We
            </div>
            <div>
              Th
            </div>
            <div>
              Fr
            </div>
            <div>
              Sa
            </div>
            <div>
              Su
            </div>
          </div>
          <table>
            <tbody>
              <tr>
                <td />
                <td
                  style="padding: 0px;"
                >
                  <div>
                    <div>
                      1
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div>
                    <div>
                      2
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div>
                    <div>
                      3
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div>
                    <div>
                      4
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div>
                    <div>
                      5
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div>
                    <div>
                      6
                    </div>
                  </div>
                </td>
              </tr>
              <tr>
                <td
                  style="padding: 0px;"
                >
                  <div>
                    <div>
                      7
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div>
                    <div>
                      8
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div>
                    <div>
                      9
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div>
                    <div>
                      10
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div>
                    <div>
                      11
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div>
                    <div>
                      12
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div>
                    <div>
                      13
                    </div>
                  </div>
                </td>
              </tr>
              <tr>
                <td
                  style="padding: 0px;"
                >
                  <div>
                    <div>
                      14
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div>
                    <div>
                      15
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div>
                    <div>
                      16
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div>
                    <div>
                      17
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div>
                    <div>
                      18
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div>
                    <div>
                      19
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div>
                    <div>
                      20
                    </div>
                  </div>
                </td>
              </tr>
              <tr>
                <td
                  style="padding: 0px;"
                >
                  <div>
                    <div>
                      21
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div>
                    <div>
                      22
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div>
                    <div>
                      23
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div>
                    <div>
                      24
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div>
                    <div>
                      25
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div>
                    <div>
                      26
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div>
                    <div>
                      27
                    </div>
                  </div>
                </td>
              </tr>
              <tr>
                <td
                  style="padding: 0px;"
                >
                  <div>
                    <div>
                      28
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div>
                    <div>
                      29
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div>
                    <div>
                      30
                    </div>
                  </div>
                </td>
                <td
                  style="padding: 0px;"
                >
                  <div>
                    <div>
                      31
                    </div>
                  </div>
                </td>
                <td />
                <td />
                <td />
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;
